fix padding in questions dialog (image overlapped with pulse logo)

--- a/app/client/components/App.css
+++ b/app/client/components/App.css
@@ -58,6 +58,7 @@
 }
 
 .pulse-gradient-background {
+  padding-top: 1.5em;
   width: 100%;
   height: 100%;
 
